--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,9 @@ h1{
   font-family: sans-serif;
 }
 
+#gallery-1{
+  padding-top: 100px;
+}
 
 #gallery-1,
 #gallery-2{
@@ -387,10 +390,10 @@ h1{
   justify-content: center;
   justify-content: space-around;
   margin: 25px;
-  padding-top: 100px;
 }
 
 img{
   width: 200px;
-  height: 300px;
+  height: 200px;
+  object-fit: cover;
 }
