--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   DIAGNOSTIC STYLING
 */
 body {
-  background: #737144;
+  background: #fff;
 }
 
 
@@ -30,7 +30,9 @@ body {
 .nav {
   height: 50px;
   width: 100%;
-  background-color: #556055;
+  padding: 0px;
+  top: -5px;
+  background-color: #fff;
   position: relative;
 }
 
@@ -41,7 +43,7 @@ body {
 .nav > .nav-header > .nav-title {
   display: inline-block;
   font-size: 22px;
-  color: #fff;
+  color: #facbcb;
   padding: 10px 10px 10px 10px;
 }
 
@@ -59,7 +61,7 @@ body {
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
-  color: #efefef;
+  color: #facbcb;
 }
 
 .nav > .nav-links > a:hover {
