--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
   height: 50px;
   width: 100%;
   padding: 0px;
-  top: -5px;
+  top: -10px;
   background-color: #fff;
   position: relative;
 }
@@ -43,7 +43,7 @@ body {
 .nav > .nav-header > .nav-title {
   display: inline-block;
   font-size: 22px;
-  color: #facbcb;
+  color: #c9ac68;
   padding: 10px 10px 10px 10px;
 }
 
@@ -61,7 +61,7 @@ body {
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
-  color: #facbcb;
+  color: #c9ac68;
 }
 
 .nav > .nav-links > a:hover {
