--- a/css/styles.css
+++ b/css/styles.css
@@ -433,12 +433,6 @@ min-width: 900px;
 
   /* homepage */
 
-  .flowerchild{
-    width: 500px;
-    height: auto;
-    float: right;
-  }
-
   .main-heading{
     text-align: center;
     font-family: Autumn in November, script;
@@ -464,9 +458,10 @@ min-width: 900px;
   }
 
   .btn-one {
-    color: #FFF;
+    color: #c9ac68;
     transition: all 0.3s;
     position: relative;
+    margin: 10px;
   }
   .btn-one span {
     transition: all 0.3s;
@@ -485,8 +480,8 @@ min-width: 900px;
     border-bottom-width: 1px;
     border-top-style: solid;
     border-bottom-style: solid;
-    border-top-color: rgba(255,255,255,0.5);
-    border-bottom-color: rgba(255,255,255,0.5);
+    border-top-color: #418080;
+    border-bottom-color: #418080;
     transform: scale(0.1, 1);
   }
   .btn-one:hover span {
@@ -505,7 +500,7 @@ min-width: 900px;
     height: 100%;
     z-index: 1;
     transition: all 0.3s;
-    background-color: rgba(255,255,255,0.1);
+    background-color:#418080);
   }
   .btn-one:hover::after {
     opacity: 0;	
