--- a/css/styles.css
+++ b/css/styles.css
@@ -433,13 +433,28 @@ min-width: 900px;
 
   /* homepage */
 
-  .main-heading{
-    text-align: center;
-    font-family: Autumn in November, script;
-    font-size: 50px;
-    margin-top: 150px;
-    margin-bottom: 150px;
+  #logo{
+
+    opacity: 0;
+    animation-name: bottomFadeOut;
+    animation-duration: 9s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-outout;
   }
+  
+  @keyframes bottomFadeOut {
+    
+    0% {
+      position: absolute;
+      opacity: 0;
+    }
+  
+    75% {
+      position: absolute;
+      opacity: 1;
+    }
+  }
+  
 
   div[class*=box] {
     height: 33.33%;
