--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,8 @@ body {
 }
 
 .nav > .nav-links {
-  display: inline;
-  float: right;
+  display:flex;
+  justify-content: flex-end;
   font-size: 18px;
 }
 
@@ -515,9 +515,10 @@ min-width: 900px;
     height: 100%;
     z-index: 1;
     transition: all 0.3s;
-    background-color:#418080);
+    /* background-color:#418080; */
   }
   .btn-one:hover::after {
     opacity: 0;	
     transform: scale(0.1, 1);
   }
+}
