--- a/css/styles.css
+++ b/css/styles.css
@@ -454,71 +454,25 @@ min-width: 900px;
       opacity: 1;
     }
   }
+
+  .homepage {
+    background:#418080;
+    /* perfectly center */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
   
-
-  div[class*=box] {
-    height: 33.33%;
-    width: 100%; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .btn {
-    line-height: 50px;
-    height: 50px;
-    text-align: center;
-    width: 250px;
-    cursor: pointer;
-  }
-
-  .btn-one {
+  .link {
+    font-family: cursive;
+    font-size: 32px;
     color: #c9ac68;
-    transition: all 0.3s;
-    position: relative;
-    margin: 10px;
+    text-decoration: none;
+    border-bottom: 3px solid transparent;
   }
-  .btn-one span {
-    transition: all 0.3s;
-  }
-  .btn-one::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: all 0.3s;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-top-color: #418080;
-    border-bottom-color: #418080;
-    transform: scale(0.1, 1);
-  }
-  .btn-one:hover span {
-    letter-spacing: 2px;
-  }
-  .btn-one:hover::before {
-    opacity: 1;	
-    transform: scale(1, 1);	
-  }
-  .btn-one::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transition: all 0.3s;
-    /* background-color:#418080; */
-  }
-  .btn-one:hover::after {
-    opacity: 0;	
-    transform: scale(0.1, 1);
-  }
-}
+  
+  .link:hover {
+    transition: all 0.2s ease-in-out;
+    border-color: #c9ac68;
+  }  
