--- a/css/styles.css
+++ b/css/styles.css
@@ -433,28 +433,6 @@ min-width: 900px;
 
   /* homepage */
 
-  #logo{
-
-    opacity: 0;
-    animation-name: bottomFadeOut;
-    animation-duration: 9s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-outout;
-  }
-  
-  @keyframes bottomFadeOut {
-    
-    0% {
-      position: absolute;
-      opacity: 0;
-    }
-  
-    75% {
-      position: absolute;
-      opacity: 1;
-    }
-  }
-
   .homepage {
     background:#418080;
     /* perfectly center */
@@ -474,5 +452,4 @@ min-width: 900px;
   
   .link:hover {
     transition: all 0.2s ease-in-out;
-    border-color: #c9ac68;
-  }  
+    border-color: #c9ac68;}
