--- a/css/styles.css
+++ b/css/styles.css
@@ -407,129 +407,39 @@ img{
 
 
 /* about */
-/* .me{
-   float: left;
-  width: 300px;
-  height: auto;
-  margin: 30px;
-  display: block;
+*{
+  margin: 10px auto;
 }
 
-.about{
-  top: 50px;
-  margin: 20px;
-  display: block;
-min-width: 900px;
+
+img{
+  width: 50%;
+  float: right;
+  padding: 40px;
 }
 
-.about{
-  margin: 20px 0 0;
+p{
+  margin: 10px auto;
+  padding: 50px;
 }
 
-@media (max-width: 900px) {
-  .me{
+
+.clearfix {
+  overflow: auto;
+}
+
+@media screen and (max-width: 760px) {
+  img{
     float: none;
     margin: 30px auto;
-    width: 300px;
-  }
-
-  .about{
-    max-width: 600px;
-    margin: 20px auto;
-  }
-  }
-
-  @media (max-width: 780px) {
-  .me{
-    margin-top: 25px;
-
-  }
-  .about{
-    width: 1em;
-  }
-  } */
-
-
-  img{
-    width: 400px;
-    height: auto;
-    margin: 30px;
-  }
-  
-  .col-text {
-    height:20em;
-  }
-  .grid-flex {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-    flex-direction: row; 
-    -webkit-flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    -webkit-justify-content: space-around;
-  }
-  .col {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-  .col-left {
-    -webkit-box-ordinal-group:-1;
-    -webkit-order: -1;
-    -ms-flex-order: -1;
-    order: -1;
-  }
-  .col-text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .Aligner-item {
-    width: 60%;
-  }
-  .col-image {
-    background-size: cover;
-    background-position:center center;
+    align-content: center;
   }
   
-  @media (max-width: 640px) {
-    .grid-flex {
-      height: 40em;
-      display: -webkit-flex;
-      -webkit-flex-direction: column;
-      flex-direction: column; 
-     }
-    .col {
-      order:vertical;
-    }
-    .col-left {
-      -webkit-box-ordinal-group:0;
-      -webkit-order: 0;
-      -ms-flex-order: 0;
-      order: 0;
-    }
-    .col-text div p {
-      padding: 1em;
-    }
-    .Aligner-item {
-      width: 90%;
-    }
-    
-    img{
-    width: 300px;
-    height: auto;
-    margin: 30px;
+  p{
+    max-width: 400px;
   }
-  }
-  
-  
-  
+}
 
 
 
