--- a/css/styles.css
+++ b/css/styles.css
@@ -340,12 +340,12 @@ hr {
     margin-top: 60px;
     max-width: 300px;
   }    
-  .social-media-list li {
+  .social-media-list .contact-icon {
     height: 60px;
     width: 60px;
     line-height: 60px;
   }
-  .social-media-list li:after {
+  .social-media-list .contact-icon:after {
     width: 60px;
     height: 60px;
     line-height: 60px;
@@ -378,13 +378,13 @@ hr {
   .social-media-list {
     left: 0;
   }
-  .social-media-list li {
+  .social-media-list .contact-icon {
     height: 55px;
     width: 55px;
     line-height: 55px;
     font-size: 2rem;
   }
-  .social-media-list li:after {
+  .social-media-list .contact-icon:after {
     width: 55px;
     height: 55px;
     line-height: 55px;
